<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="1500dp"
    tools:context=".info">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/why_recycle" />

                <TextView
                    android:id="@+id/why"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:text="@string/why"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_dark"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    android:typeface="monospace"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                <TextView
                    android:id="@+id/info_why"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/why_intro"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="49dp" />

                <TextView
                    android:id="@+id/info_why2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/why1"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="49dp" />

                <TextView
                    android:id="@+id/info_why4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/why2"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="49dp" />

                <TextView
                    android:id="@+id/info_why11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/why3"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="49dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="18dp">

                    <TextView
                        android:id="@+id/info_why3"
                        android:layout_width="235dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/why4"
                        android:textColor="@android:color/background_dark"
                        android:textSize="18sp"
                        tools:layout_editor_absoluteX="8dp"
                        tools:layout_editor_absoluteY="49dp" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/superhero" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>